Add Planning execution date semantics
